--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": "^8.2|^8.3",
         "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+        "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "livewire/livewire": "^3.0"
     },
     "extra": {
         "laravel": {
